cabal-version      : 3.0
name               : marlowe-scaling
version            : 0.1.0.0
synopsis           : Scalable creation of Marlowe transactions.
license            : Apache-2.0
license-file       : LICENSE
author             : Brian W Bush <brian.bush@iohk.io>
maintainer         : Brian W Bush <brian.bush@iohk.io>
category           : Network
build-type         : Simple
extra-source-files : ReadMe.md

library
  exposed-modules   : Language.Marlowe.Runtime.Client
                      Language.Marlowe.Runtime.Client.Build
                      Language.Marlowe.Runtime.Client.List
                      Language.Marlowe.Runtime.Client.Run
                      Language.Marlowe.Runtime.Client.Sign
                      Language.Marlowe.Runtime.Client.Submit
                      Language.Marlowe.Runtime.Client.Types
  hs-source-dirs    : src
  build-depends     : base >= 4.9 && < 5
                    , aeson
                    , async
                    , bytestring
                    , cardano-api
                    , containers
                    , data-default
                    , marlowe
                    , marlowe-chain-sync
                    , marlowe-protocols
                    , marlowe-runtime
                    , monad-control
                    , network
                    , text
                    , time
                    , transformers
                    , transformers-base
                    , typed-protocols
  ghc-options       : -Wall
                      -Wnoncanonical-monad-instances
                      -Wincomplete-uni-patterns
                      -Wincomplete-record-updates
                      -Wredundant-constraints
                      -Widentities
                      -Wunused-packages
  default-language  : Haskell2010

executable marlowe-scaling
  main-is           : Main.hs
  hs-source-dirs    : app
  build-depends     : base >= 4.9 && < 5
                    , aeson
                    , async
                    , bytestring
                    , cardano-api
                    , marlowe
                    , marlowe-chain-sync
                    , marlowe-runtime
                    , marlowe-scaling
                    , mtl
                    , plutus-ledger-api
                    , random
                    , split
                    , text
                    , time
  ghc-options       : -Wall
                      -Wnoncanonical-monad-instances
                      -Wincomplete-uni-patterns
                      -Wincomplete-record-updates
                      -Wredundant-constraints
                      -Widentities
                      -Wunused-packages
  default-language  : Haskell2010
