cabal-version: 2.4
name:          marlowe-scripts
version:       0.1.0.0

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    ScopedTypeVariables
    StandaloneDeriving

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints -Widentities
    -Wunused-packages -Werror

library
  import:          lang
  hs-source-dirs:  src
  exposed-modules: Language.Marlowe.Scripts.OpenRole
  build-depends:
    , aeson >=2 && <3
    , base >=4.9 && <5
    , bytestring >=0.10.12 && <0.12
    , containers ^>=0.6.5
    , marlowe-cardano
    , mtl >=2.2 && <3
    , newtype-generics ^>=0.6.2
    , plutus-ledger ^>=1.2
    , plutus-ledger-api ==1.0.0.1
    , plutus-script-utils ==1.2.0.0
    , plutus-tx ==1.0.0.0
    , template-haskell >=2.16 && <3
    , text >=1.2.4 && <2
    , time >=1.9.3 && <2
    , transformers ^>=0.5.6
