cabal-version: 2.4
name:          marlowe-scripts
version:       0.1.0.0

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    ScopedTypeVariables
    StandaloneDeriving

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints -Widentities
    -Werror

-- I'm experiencing carazy behaviour regarding plutus-tx-plugin
-- which is at the same required and non-required. So I switched
-- this off for now:
-- -Wunused-packages

flag defer-plugin-errors
  description:
    Defer errors from the plugin, useful for things like Haddock that can't handle it.

  default:     False
  manual:      True

flag trace-plutus
  description: Enable Plutus trace log for Marlowe validators.
  default:     False
  manual:      True

library
  import:          lang
  hs-source-dirs:  src

  if !(impl(ghcjs) || os(ghcjs))
    build-depends: plutus-tx-plugin ==1.0.0.0

  build-depends:
    , base >=4.9 && <5
    , bytestring >=0.10.12 && <0.12
    , marlowe-cardano
    , plutus-ledger ^>=1.2
    , plutus-ledger-api ==1.0.0.1
    , plutus-script-utils ==1.2.0.0
    , plutus-tx ==1.0.0.0
    , plutus-tx-plugin ==1.0.0.0
    , serialise ^>=0.2.6

  if flag(trace-plutus)
    cpp-options: -DTRACE_PLUTUS

  exposed-modules: Language.Marlowe.Scripts.OpenRole

executable marlowe-scripts
  import:         lang
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:
    , base >=4.9 && <5
    , bytestring >=0.10.12 && <0.12
    , marlowe-scripts

  ghc-options:    -threaded
