cabal-version: 2.2
name: marlowe-test
version: 0.1.1.0
license: Apache-2.0
license-files:
  LICENSE
  NOTICE
build-type: Simple
maintainer: B W Bush <brian.bush@iokk.io>
stability: experimental
author: B W Bush <brian.bush@iokk.io>
synopsis:
  Tests for Marlowe semantics and validators on Cardano
description:
  Unit and integration tests for Marlowe semantics, serialization, and Plutus
  validators on the Cardano blockchain.
category: Language

data-files:
  test/contract.json
  test/input.json
  test/state.json
  test/Spec/Marlowe/Serialization/golden/swap-contract.json
  test/Spec/Marlowe/Serialization/golden/swap-module.json

source-repository head
  type: git
  location: https://github.com/input-output-hk/marlowe-cardano

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: False
    manual: True

common lang
  default-language: Haskell2010
  default-extensions: ExplicitForAll ScopedTypeVariables
                      DeriveGeneric StandaloneDeriving DeriveLift
                      DeriveFunctor DeriveFoldable
                      DeriveTraversable
  ghc-options:
    -Wall -Wnoncanonical-monad-instances
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities
    -Wunused-packages

flag limit-static-analysis-time
  description:
    This flag sets the timeout seconds for static analysis testing of arbitrary
    contracts, which can take so much time on a complex contract that it exceeds
    hydra/CI resource limits, see SCP-4267.
  default: True


library
  import: lang
  hs-source-dirs: src
  exposed-modules:
    Data.Jsonable
    Spec.Marlowe.Common
    Spec.Marlowe.Marlowe
    Spec.Marlowe.Semantics
    Spec.Marlowe.Plutus
    Spec.Marlowe.Plutus.Arbitrary
    Spec.Marlowe.Plutus.AssocMap
    Spec.Marlowe.Plutus.Lens
    Spec.Marlowe.Plutus.Prelude
    Spec.Marlowe.Plutus.Script
    Spec.Marlowe.Plutus.ScriptContext
    Spec.Marlowe.Plutus.Specification
    Spec.Marlowe.Plutus.Transaction
    Spec.Marlowe.Plutus.Types
    Spec.Marlowe.Plutus.Value
    Spec.Marlowe.Serialization
    Spec.Marlowe.Serialization.CoreJson
    Spec.Marlowe.Serialization.ExtendedJson
    Spec.Marlowe.Service
    Spec.Marlowe.Service.Isabelle
    Spec.Marlowe.Service.Random
    Spec.Marlowe.Service.Serialization
    Spec.Marlowe.Service.Types
    Spec.Marlowe.Semantics.Arbitrary
    Spec.Marlowe.Semantics.AssocMap
    Spec.Marlowe.Semantics.Compute
    Spec.Marlowe.Semantics.Entropy
    Spec.Marlowe.Semantics.Functions
    Spec.Marlowe.Semantics.Golden
    Spec.Marlowe.Semantics.Golden.Escrow
    Spec.Marlowe.Semantics.Golden.Pangram
    Spec.Marlowe.Semantics.Golden.Swap
    Spec.Marlowe.Semantics.Golden.Trivial
    Spec.Marlowe.Semantics.Golden.ZeroCouponBond
    Spec.Marlowe.Semantics.Merkle
    Spec.Marlowe.Semantics.Orphans
    Spec.Marlowe.Semantics.Util
  build-depends:
      base >=4.9 && <5
    , aeson
    , bytestring
    , cardano-api
    , containers
    , data-default
    , filepath
    , hint
    , lens
    , marlowe
    , marlowe-spec-test
    , mtl
    , plutus-ledger
    , plutus-ledger-api
    , plutus-script-utils
    , plutus-tx
    , QuickCheck
    , quickcheck-instances
    , sbv >=8.4
    , serialise
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , text
    , these
    , vector


test-suite marlowe-test
  import: lang
  hs-source-dirs: test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  build-depends:
      base >=4.9 && <5
    , marlowe-test
    , tasty
    , tasty-quickcheck


executable marlowe-spec-client
  import: lang
  hs-source-dirs: spec-client
  main-is: Main.hs
  build-depends:
      base >=4.9 && <5
    , aeson
    , bytestring
    , marlowe-test
