cabal-version: 2.2
name: marlowe
version: 0.1.0.1
license: Apache-2.0
license-files:
  LICENSE
  NOTICE
build-type: Simple
maintainer: alexander.nemish@iohk.io
stability: experimental
author: Alexander Nemish
synopsis:
  Marlowe: financial contracts on Cardano Computation Layer
description:
  A reference implementation of Marlowe, domain-specific language targeted at
  the execution of financial contracts in the style of Peyton Jones et al
  on Cardano Computation Layer.
category: Language
extra-doc-files: README.md

source-repository head
  type: git
  location: https://github.com/input-output-hk/marlowe-cardano

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: False
    manual: True

common lang
  default-language: Haskell2010
  default-extensions: ExplicitForAll ScopedTypeVariables
                      DeriveGeneric StandaloneDeriving DeriveLift
                      DeriveFunctor DeriveFoldable
                      DeriveTraversable
  ghc-options:
    -Wall -Wnoncanonical-monad-instances
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities
    -Wunused-packages

library
  import: lang
  hs-source-dirs: src

  if !(impl(ghcjs) || os(ghcjs))
    build-depends: plutus-tx-plugin -any

  build-depends:
    base,
    aeson <2,
    base16-aeson,
    base16-bytestring,
    bytestring,
    containers,
    deriving-aeson,
    mtl,
    newtype-generics,
    plutus-ledger-ada,
    plutus-ledger-api,
    plutus-ledger-slot,
    plutus-script-utils,
    plutus-tx,
    sbv >=8.4,
    scientific,
    serialise,
    template-haskell,
    text,
    wl-pprint,

  exposed-modules:
    Language.Marlowe
    Language.Marlowe.Extended.V1
    Language.Marlowe.Core.V1.Semantics
    Language.Marlowe.Core.V1.Semantics.Types
    Language.Marlowe.FindInputs
    Language.Marlowe.Client
    Language.Marlowe.Client.History
    Language.Marlowe.Util
    Language.Marlowe.ParserUtil
    Language.Marlowe.Scripts
    Language.Marlowe.Pretty
    Language.Marlowe.Analysis.FSSemantics
    Plutus.Debug

test-suite marlowe-test
    import: lang
    hs-source-dirs: test

    if flag(defer-plugin-errors)
      ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

    type: exitcode-stdio-1.0
    main-is: Spec.hs

    other-modules:
        Spec.Marlowe.Common
        Spec.Marlowe.Marlowe
        Spec.Marlowe.Semantics
        Spec.Marlowe.Semantics.Arbitrary
        Spec.Marlowe.Semantics.AssocMap
        Spec.Marlowe.Semantics.Compute
        Spec.Marlowe.Semantics.Entropy
        Spec.Marlowe.Semantics.Functions
        Spec.Marlowe.Semantics.Golden
        Spec.Marlowe.Semantics.Golden.Pangram
        Spec.Marlowe.Semantics.Orphans
        Spec.Marlowe.Semantics.Util

    build-depends:
        base >=4.9 && <5,
        aeson,
        bytestring,
        containers,
        data-default,
        hint,
        lens,
        marlowe,
        mtl,
        plutus-ledger,
        plutus-ledger-api,
        plutus-ledger-slot,
        plutus-script-utils,
        plutus-tx,
        QuickCheck,
        quickcheck-instances,
        serialise,
        tasty,
        tasty-hunit,
        tasty-quickcheck,
        text,
