cabal-version: 2.2
name: marlowe
version: 0.1.0.3
license: Apache-2.0
license-files:
  LICENSE
  NOTICE
build-type: Simple
maintainer: alexander.nemish@iohk.io
stability: experimental
author: Alexander Nemish
synopsis:
  Marlowe: financial contracts on Cardano Computation Layer
description:
  A reference implementation of Marlowe, domain-specific language targeted at
  the execution of financial contracts in the style of Peyton Jones et al
  on Cardano Computation Layer.
category: Language
extra-doc-files: README.md

source-repository head
  type: git
  location: https://github.com/input-output-hk/marlowe-cardano

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: False
    manual: True

common lang
  default-language: Haskell2010
  default-extensions: ExplicitForAll ScopedTypeVariables
                      DeriveGeneric StandaloneDeriving DeriveLift
                      DeriveFunctor DeriveFoldable
                      DeriveTraversable
  ghc-options:
    -Wall -Wnoncanonical-monad-instances
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities
    -Wunused-packages

library
  import: lang
  hs-source-dirs: src

  if !(impl(ghcjs) || os(ghcjs))
    build-depends: plutus-tx-plugin -any

  build-depends:
    base,
    aeson <2,
    base16-aeson,
    base16-bytestring,
    bech32,
    bytestring,
    containers,
    deriving-aeson,
    mtl,
    newtype-generics,
    ordered-containers,
    plutus-ledger-api,
    plutus-script-utils,
    plutus-tx,
    sbv >=8.4,
    scientific,
    serialise,
    template-haskell,
    text,
    wl-pprint,

  exposed-modules:
    Language.Marlowe
    Language.Marlowe.Extended.V1
    Language.Marlowe.Extended.V1.Metadata.Types
    Language.Marlowe.Core.V1.Semantics
    Language.Marlowe.Core.V1.Semantics.Types
    Language.Marlowe.Core.V1.Semantics.Types.Address
    Language.Marlowe.FindInputs
    Language.Marlowe.Client
    Language.Marlowe.Client.History
    Language.Marlowe.Util
    Language.Marlowe.ParserUtil
    Language.Marlowe.Scripts
    Language.Marlowe.Pretty
    Language.Marlowe.Analysis.FSSemantics
    Plutus.Debug
