cabal-version:      2.4
name:               base16-aeson
version:            0.1.0.0

library
    exposed-modules:  Data.ByteString.Base16.Aeson

    build-depends:
      , aeson
      , base ^>=4.14.3.0
      , base16
      , bytestring
      , text
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions:
      ImportQualifiedPost

