cabal-version:   3.0
name:            plutus-ledger-aeson
version:         1.0.1
license:         Apache-2.0

author:          Michael Peyton Jones, Jann Mueller

common lang
  default-language:   Haskell2010
  default-extensions:
    DerivingVia
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    StandaloneDeriving

  -- See Plutus Tx readme for why we need the following flags:
  -- -fobject-code -fno-ignore-interface-pragmas and -fno-omit-interface-pragmas
  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -fobject-code
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

flag defer-plugin-errors
  description:
    Defer errors from the plugin, useful for things like Haddock that can't handle it.

  default:     False
  manual:      True

library
  import:             lang
  hs-source-dirs:     src
  default-language:   Haskell2010
  exposed-modules:
    PlutusCore.Data.Aeson
    PlutusTx.Builtins.Aeson
    Plutus.V1.Ledger.Aeson

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
    , plutus-tx                       >=1.0.0
    , plutus-core                     >=1.0.0
    , plutus-ledger-api               >=1.0.0

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , aeson
    , aeson-via-serialise
    , base               >=4.9  && <5
    , base16-aeson
    , bytestring
    , cborg
    , flat
    , hashable
    , prettyprinter
    , scientific
    , serialise
    , tagged
    , text

  ghc-options:        -fprint-potential-instances

  reexported-modules:
    Plutus.V1.Ledger.Time as Ledger.Time,
    Plutus.V1.Ledger.Value as Ledger.Value,

  if flag(defer-plugin-errors)
    ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

