cabal-version: 3.4
name:          base16-aeson
version:       0.1.0.1

library
  exposed-modules:    Data.ByteString.Base16.Aeson
  build-depends:
    , aeson ^>=2.1.2.1
    , base ^>=4.16.4.0 && <5
    , base16 ^>=0.3.2
    , bytestring ^>=0.11.4.0
    , text ^>=2.0.2

  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions: ImportQualifiedPost
