cabal-version: 3.4
name:          base16-aeson
version:       0.1.0.0

library
  exposed-modules:    Data.ByteString.Base16.Aeson
  build-depends:
    , aeson ^>=2.2
    , base >=4.9 && <5
    , base16 ^>=1.0
    , bytestring >=0.10.12 && <0.12
    , text ^>=2.0

  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions: ImportQualifiedPost
